p8-todo-app/k8s/todo-app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo-app
  namespace: todo-app
  labels:
    app: todo-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: 3000
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    name: todo-app
    namespace: todo-app
  type: NodePort
