p8-todo-app/k8s/todo-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: todo-app
spec:
  ports: 
    - port: 3000
      protocol: TCP
  selector:
    app: todo-app
